--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <h2>Projetos Destaque</h2>
             <div class="projeto">
                 <h3>Empreendendo do Campo à Cidade</h3>
-                <img src="imagens/empreendendo-campo-cidade.jpg" alt="Alunos do projeto Empreendendo do Campo à Cidade">
+                <img src="image.png" alt="Alunos do projeto Empreendendo do Campo à Cidade">
                 <p>Desenvolvido pela professora Ana Paula Lazzeris Ghellere, da Escola Municipal Serafin Machado de Souza, em São Miguel do Iguaçu, este projeto envolveu alunos do 3º ano do Ensino Fundamental I em atividades que destacaram o empreendedorismo sustentável, utilizando recursos como jogos educativos, palestras e confecção de brinquedos com materiais recicláveis.</p>
             </div>
             <div class="projeto">
                 <h3>A Rota do Milho: Do Campo à Cidade</h3>
-                <img src="imagens/rota-do-milho.jpg" alt="Visita ao campo no projeto A Rota do Milho">
+                <img src="image copy.png" alt="Visita ao campo no projeto A Rota do Milho">
                 <p>Sob a orientação da professora Juliete Gomes da Silva Póss, da Escola Municipal Caetano Vezozzo, em Cambará, este projeto explorou a cadeia produtiva do milho, promovendo visitas a plantações, agroindústrias e supermercados, além da criação de um site educativo para compartilhar os aprendizados.</p>
             </div>
             <div class="projeto">
                 <h3>Exuberâncias do Campo, Sabores do Nosso Chão</h3>
-                <img src="imagens/exuberancias-do-campo.jpg" alt="Alimentos do campo no projeto Exuberâncias do Campo">
+                <img src="image copy 2.png" alt="Alimentos do campo no projeto Exuberâncias do Campo">
                 <p>A professora Idana Cristina Menon, do Colégio Estadual do Campo Nossa Senhora de Fátima, em Irati, desenvolveu este projeto com alunos do 7º ano, focando na alimentação saudável e na valorização dos produtos cultivados no campo, culminando na criação de uma revista e folder compartilhados com escolas urbanas.</p>
             </div>
         </div>
